testsuite/tests/overloadedlists/should_fail/overloadedlistsfail05.hs
{-# LANGUAGE OverloadedLists #-}

main = print (length ['a'..(10 :: Int)])
