testsuite/tests/overloadedlists/should_fail/overloadedlistsfail05.stderr

overloadedlistsfail05.hs:3:24: error:
    • Couldn't match type ‘Char’ with ‘Int’
      Expected: GHC.Exts.Item [Int]
        Actual: Char
    • In the expression: 'a'
      In the first argument of ‘length’, namely
        ‘(['a' .. (10 :: Int)] :: [Int])’
      In the first argument of ‘print’, namely
        ‘(length (['a' .. (10 :: Int)] :: [Int]))’
